--- a/app/src/main/res/layout/activity_word_counter.xml
+++ b/app/src/main/res/layout/activity_word_counter.xml
@@ -23,7 +23,7 @@
     <Button
         android:onClick="onCountButtonClicked"
         android:id="@+id/count_btn"
-        android:text="@countEmUp"
+        android:text="countEmUp"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="25dp"
         android:layout_width="wrap_content"
